samples/_failures_safe/1761509055_992d1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ba32eba.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_3ba32eba.c:167:51: error: expected ‘;’ at end of input
  167 |         case TOKEN_NUMBER: printf("NUMBER"); break
      |                                                   ^
      |                                                   ;
./samples/SAFE/__tmp_3ba32eba.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_NUMBER: printf("NUMBER"); break
      |         ^~~~
./samples/SAFE/__tmp_3ba32eba.c:167:9: error: expected declaration or statement at end of input
